# fastapi-tortoise-pytest-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.en.md  README.md  conftest.py  dev_requirements.txt  justfile  main.py  pyproject.toml  requirements.txt  settings.py
app/: main.py  settings.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  users.py
models/: __init__.py  base.py  users.py
tests/: conftest.py  test_users.py
