[project]
name = "fastapi-tortoise-async-test-demo"
dynamic = ["version"]
description = ""
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "tortoise-orm[asyncpg]>=1.1.7",
    "asynctor>=0.12.11",
]

[dependency-groups]
dev = [
    "asynctor[testing]>=0.12.11",
    "tortoise-orm[ipython]>=1.1.7",
    "coverage>=7.14.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "typer>=0.26.7",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.tortoise]
tortoise_orm = "app.settings.TORTOISE_ORM"

[tool.uv]
package = false

[tool.pdm]
distribution = false

[tool.pdm.version]
path = "app/__init__.py"

[tool.pdm.scripts]
deps = "just deps {args}"
test = "just test {args}"
report = "just report {args}"
lint = "just lint {args}"

[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.report]
omit = ["*/tests/*"]
exclude_also = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
extend-select = [
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
